# all-words-phrases-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: compositionality_detection_neural_language_models_idiom_embedding_20260322_131831.jsonl  implicit_vocabulary_token_erasure_multi-token_word_representation_LLM_layers_20260322_131509.jsonl
papers/: README.md
papers/pages/: 2406.20086_token_erasure_implicit_vocabulary_manifest.txt
results/: all_segments.csv  baseline_classifications.csv  classified_vocabulary.csv  config.json  doc_stats.csv  example_items.csv  implicit_vocabulary.csv  ner_entities.csv  statistical_tests.json  summary_statistics.json  vocabulary_with_ner.csv
src/: analyze_and_visualize.py  classify_compositionality.py  extract_vocabulary.py
